--- a/Downloads/RestIpiHomeWork/RestIpiHomeWork/src/main/resources/application.properties
+++ b/Downloads/RestIpiHomeWork/RestIpiHomeWork/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.show_sql=true
 spring.mvc.hiddenmethod.filter.enabled=true
+
+# ???????????? ?????? ??? ?????????
+#management.endpoints.web.exposure.include=env, info, health
+#management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=metrics, prometheus
+management.endpoint.health.show-details=always
